# xarm_quest_teleop

./: .gitignore  CMakeLists.txt  LICENSE  README.md  all_cams_calib.json  install.sh  requirement.txt  setup_docker.sh
asset/: robot.py  robot_ros2.py
cloudgripper_teleop/: CMakeLists.txt
config/: cleanup_table_d2.json  coffee_transport_d1.json  pick_place_veggis_d1.json  test.yaml  three_piece_toy_d2.json
configs/: constant.py
policy_eval/: real_eval.py  ros_palm_eval_ros2.py
prep/: camera_calibration.py  demostration_data_collection.py  ros_demo_collection.py
ros2_packages/xarm_quest_teleop/: all_cams_calib.json  package.xml  setup.cfg  setup.py
ros2_packages/xarm_quest_teleop/config/: cleanup_table_d2.json  coffee_transport_d1.json  lego_build_d2.json  three_piece_toy_d1.json
ros2_packages/xarm_quest_teleop/config/eval/: cleanup_table_d2_dry_run.yaml  cleanup_table_d2_focuspool_l1.json  cleanup_table_d2_rollout.yaml  cleanup_table_d2_rollout_focuspool.yaml  cleanup_table_d2_rvt2.json  cleanup_table_d2_spatial_softmax.json  coffee_transport_d1_spatial_softmax.json  lego_build_d2_spatial_softmax.json
ros2_packages/xarm_quest_teleop/config/ros2/: hardware.yaml  runtime.yaml  xarm_api_services.yaml
ros2_packages/xarm_quest_teleop/launch/: xarm_quest_teleop_bringup.launch.py
ros2_packages/xarm_quest_teleop/xarm_quest_teleop/configs/: collector_config.py  eval_config.py  quest2_config.py  robot_config.py  ros2_config.py  teleop_config.py
ros2_packages/xarm_quest_teleop/xarm_quest_teleop/data_collection/: collector.py
ros2_packages/xarm_quest_teleop/xarm_quest_teleop/eval/: action_executor.py  eval_runner.py  live_viz.py
ros2_packages/xarm_quest_teleop/xarm_quest_teleop/io/: camera.py  process_manager.py  quest2.py  video_recorder.py
ros2_packages/xarm_quest_teleop/xarm_quest_teleop/nodes/: __init__.py  quest_stamped_node.py
ros2_packages/xarm_quest_teleop/xarm_quest_teleop/policy/: __init__.py  base.py  cache_action_replay_policy.py  network_base.py  registry.py  seeker_policy.py  seeker_preprocessing.py
ros2_packages/xarm_quest_teleop/xarm_quest_teleop/robots/: xarm.py
ros2_packages/xarm_quest_teleop/xarm_quest_teleop/ros/: __init__.py  compat.py
ros2_packages/xarm_quest_teleop/xarm_quest_teleop/scripts/: camera_calibration.py  convert_eval_videos_to_gifs.py  convert_raw_data_to_cache.py  export_real_task_gifs.py  gif_temporal_strips.py  project_lmdb_action_chunk.py  render_eval_feature_activation_videos.py  retime_eval_gifs.py  ros_rgb_view.py  run_data_collection.py  run_policy_eval.py  run_quest_xarm_teleop_sync.py
ros2_packages/xarm_quest_teleop/xarm_quest_teleop/sensors/: cameras.py
ros2_packages/xarm_quest_teleop/xarm_quest_teleop/teleop/: quest_xarm_teleop_sync.py
ros2_packages/xarm_quest_teleop/xarm_quest_teleop/utils/: config_utils.py  conversion_utils.py  teleop_utils.py  tree_utils.py
ros_link/: bringup.launch
ros_link/teleop_msgs/: CMakeLists.txt
ros_link/teleop_msgs/msg/: RobotMsgStamped.msg
scripts/: build_ros2_ws.sh  robot_ros2.py  (+6 more)
teleop_msgs/: package.xml
teleop_msgs/msg/: OVR2ROSInputsStamped.msg
xarm_quest_teleop_msgs/: CMakeLists.txt  package.xml
xarm_quest_teleop_msgs/msg/: OVR2ROSInputsStamped.msg
(+93 files in other folders)
