<?xml version="1.0"?>
<package format="2">
  <name>teleop_msgs</name>
  <version>0.0.1</version>
  <description>Stamped wrapper messages for teleop and data collection</description>

  <maintainer email="you@todo.todo">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build -->
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>quest2ros</build_depend>
  <build_depend>xarm_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <!-- Run -->
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>quest2ros</exec_depend>
  <exec_depend>xarm_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>


</package>
