<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>xarm_quest_teleop</name>
  <version>0.2.0</version>
  <description>ROS2 teleoperation, data collection, and policy evaluation for xArm Quest Teleop manipulation.</description>
  <maintainer email="ruiyu@example.com">Ruiyu</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>xarm_quest_teleop_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>quest2ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>ros_tcp_endpoint</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>xarm_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
